--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  color: white;
+  color: #330867;
   min-height: 100vh;
 }
 
@@ -9,8 +9,8 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 10vh;
-  background: #330867;
-  color: white;
+  background: #30309a;
+  color: black;
 }
 .nav-links {
   width: 40%;
@@ -19,15 +19,28 @@ nav {
   align-items: center;
   list-style: none;
 }
+.nav-links:hover {
+  color: #ffc107;
+}
+
 button[disabled] {
   opacity: 50%;
 }
 
 .cards {
-  border: solid;
-  border-color: #6b22c9;
+  background: white;
+  border: solid 5px;
+  border-color: #30309a;
+  border-radius: 3%;
+  font-weight: bold;
 }
 .btn {
-  background: #6b22c9;
+  background: #30309a;
   color: white;
+}
+.logo {
+  padding: 20px;
+}
+.liStyle:hover {
+  color: #ffce31;
 }
